Fix card spacing in project section

--- a/style.css
+++ b/style.css
@@ -166,12 +166,12 @@ div.header-buttons {
 .project-section {
   grid-area:  1 / 1 / 3 / 2 ;
   display: grid;
-  grid-template-rows: 50px 1fr;
+  grid-template-rows: 80px 1fr;
   padding: 0 26px;
-  align-items: flex-start;
+  /* align-items: flex-start; */
 }
 
-.project-section h3 {
+.project-section h2 {
   justify-self: flex-start;
   align-self: flex-end;
 }
@@ -180,7 +180,7 @@ div.header-buttons {
   grid-row: 2 / 3;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 20px;
+  gap: 30px 24px;
 }
 
 .card {
@@ -246,11 +246,11 @@ div.header-buttons {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 18px 0 30px 0;
+  margin: 41px 0 30px 0;
 }
 
-h3 {
-  margin-bottom: 10px;
+h2 {
+  margin-bottom: 16px;
 }
 
 .announcements {
